--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -785,6 +785,16 @@
         request.onerror = function (event) {
             console.error('Error opening database:', event.target.error);
         };
+        
+        request.onupgradeneeded = function (event) {
+            db = event.target.result;
+
+            let objectStore = db.createObjectStore('imageTable', { keyPath: 'id' });
+
+            objectStore.createIndex('imageIndex', 'image', { unique: false });[]
+
+            console.log('Object store created');
+        };
 
         function getDataById(id) {
             return new Promise((resolve, reject) => {
