--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -84,11 +84,11 @@ style="background-color: rgba(255, 255, 255, 0.4) !important; backdrop-filter: b
                     </a>
                     <a class="dropdown-item" href="#">
                         <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                        Settings
+                        Sync Images
                     </a>
                     <a class="dropdown-item" href="#">
                         <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                        Activity Log
+                        Sync Inventory
                     </a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
@@ -173,17 +173,13 @@ style="background-color: rgba(255, 255, 255, 0.4) !important; backdrop-filter: b
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Profile
+                <a class="dropdown-item" id="syncImages">
+                    <i class="fas fa-sync fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Sync Images
                 </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Settings
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Activity Log
+                <a class="dropdown-item" id="syncInventory">
+                    <i class="fas fa-sync fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Sync Inventory
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
