--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -1,3 +1,51 @@
+<div class="modal fade " id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header custom-bg">
+                <h5 class="modal-title" id="exampleModalLabel">Sales Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="custom-modal-body">
+                <div class="card ">
+                    <div class="card-header py-2 header-bg">
+                        <h6 class="m-0 font-weight-bold table-title">Update Status: </h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="row mb-2">
+                            <div class="col-md-6">
+                                <label class="form-label" for="mu_password">Transaction ID</label>
+                                <input autocomplete="off" id="modalId" name="modalId" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label" for="mu_password">Status Update</label>
+                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Status"
+                                    name="statusModal" id="statusModal" />
+                                <input autocomplete="off" type="hidden" id="statusModalID" name="statusModalID" />
+                                <div class="custom-dropdown cdw-tableoption" id="statusModalDropdown"></div>
+                            </div>
+                        </div>
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
+                                <label class="form-label" for="confirmModal">Confirmation</label>
+                                <input autocomplete="off" placeholder="Type 'CONFIRM' to Update status" id="confirmModal" name="confirmModal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-inventory" id="closeBtn" data-dismiss="modal">Close</button>
+                <button type="button" id="updateBtn" class="btn btn-outline-inventory" disabled>
+                    <span id="btn-label-modal">Update</span>
+                    <span id="btnSpinner-modal" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade " id="sales-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
