--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -1,10 +1,13 @@
 <script>
     document.addEventListener('DOMContentLoaded', () => {
+        AddStatusOption();
         data = [];
         detailid = '';
         let itemsPerPage = $('#numberdisplay').val();
         const numberDisplaySelect = document.getElementById('numberdisplay');
+
         populateTable(data);
+
         const currentDate = getCurrentDate();
         const tomorrowDate = getTomorrowDate();
         let defaultnumber = 10;
@@ -21,6 +24,73 @@
             console.log(dataRow);
             detailid = dataRow[0];
         })
+
+        $(document).on('click', '#editBtn', function () {
+            $("#modalId").val(detailid);
+        });
+
+        $('#confirmModal').on('input', function () {
+            const confirmValue = $(this).val().trim().toUpperCase();
+            const updateBtn = $('#updateBtn');
+
+            if (confirmValue === 'CONFIRM') {
+                updateBtn.prop('disabled', false);
+            } else {
+                updateBtn.prop('disabled', true);
+            }
+        });
+
+        $(document).on("input", "#statusModal", function () {
+            $("#statusModalID").val("");
+        });
+
+        $(document).on('click', '#updateBtn', function () {
+            const statusUpdate = $("#statusModalID").val();
+            const transactionId = $("#modalId").val();
+            var $btnIcon = $(this).find('#btn-label-modal');
+            var $btnSpinner = $(this).find('#btnSpinner-modal');
+            $btnIcon.addClass('d-none');
+            $btnSpinner.removeClass('d-none');
+            let message = '';
+
+            if (statusUpdate == ''){
+                message += "Please select a status"
+            }
+            if (transactionId == ''){
+                message += "ID Does not Exist"
+            }
+
+            // console.log(statusUpdate, transactionId, message)
+            if(message != ''){
+                warning('Required', `${message}`);
+                $btnIcon.removeClass('d-none');
+                $btnSpinner.addClass('d-none'); 
+            } else {
+                $.ajax({
+                    url: `/salesdetails/status/${transactionId}`,
+                    method: 'POST',
+                    data:{
+                        status: statusUpdate
+                    },
+                    success: function (data) {
+                        if(data.msg == "success"){
+                            success('Updated', `${statusUpdate} ${transactionId}`)
+                        }
+                        LoadData()
+                        $('#editModal').modal('hide');
+                        $('#modalId').val('');
+                        $('#statusModalID').val('');
+                        $('#statusModal').val('');
+
+                        $btnIcon.removeClass('d-none');
+                        $btnSpinner.addClass('d-none'); 
+                    },
+                    error: function (xhr, status, error) {
+                        console.error(error);
+                    }
+                });
+            }
+        });
 
         $(document).on('click', '.bmss-link', function () {
             console.log(detailid);
@@ -209,7 +279,7 @@
                     let action = ``;
                     if (item.status === 'SOLD') {
                         action = `
-                        <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>`
+                        <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#editModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>`
                     }
 
                     const tr = document.createElement('tr');
@@ -268,48 +338,7 @@
         });
 
         $(document).on('click', '#addBtn', function () {
-            const shiftValue = $('#shift').val();
-            const dateRangeValue = $('#dateRange').val();
-            const posidValue = $('#posid').val();
-
-            $(".progress").slideDown();
-
-            $.ajax({
-                url: '/salesdetails/load',
-                method: 'POST',
-                dataType: 'json',
-                data: {
-                    shift: shiftValue,
-                    dateRange: dateRangeValue,
-                    posid: posidValue
-                },
-                xhrFields: {
-                    onprogress: function (e) {
-                        if (e.lengthComputable) {
-                            var percentComplete = (e.loaded / e.total) * 100;
-                            $(".progress-bar").css("width", percentComplete + "%");
-                        }
-                    }
-                },
-                success: function (data) {
-                    setTimeout(function () {
-                        $(".progress").slideUp(function () {
-                            if (data.msg === 'success') {
-                                $('#shift').val('');
-                                $('#dateRange').val('');
-                                $('#posid').val('');
-                                populateTable(data.data, itemsPerPage);
-                            } else {
-                                console.error(data.msg);
-                            }
-                        });
-                    }, 1000);
-                },
-                error: function (error) {
-                    console.error(error);
-                }
-            });
-
+            LoadData();
         });
 
         $('#dateRange').daterangepicker({
@@ -351,5 +380,65 @@
         }
 
         $('#search-input').on('input', filterTableRows);
+
+        function AddStatusOption(){
+            let activeData = [];
+            let dropdownID = "statusModalDropdown";
+            let inputID = "statusModal";
+            let hiddenID = "statusModalID";
+            activeData.push({
+                display: "REFUND",
+                value: "REFUNDED",
+            });
+            activeData.push({
+                display: "CANCEL",
+                value: "CANCELLED",
+            });
+            AddDropdownData(dropdownID, activeData, inputID, hiddenID)
+        }
+
+        function LoadData() {
+            const shiftValue = $('#shift').val();
+            const dateRangeValue = $('#dateRange').val();
+            const posidValue = $('#posid').val();
+
+            $(".progress").slideDown();
+
+            $.ajax({
+                url: '/salesdetails/load',
+                method: 'POST',
+                dataType: 'json',
+                data: {
+                    shift: shiftValue,
+                    dateRange: dateRangeValue,
+                    posid: posidValue
+                },
+                xhrFields: {
+                    onprogress: function (e) {
+                        if (e.lengthComputable) {
+                            var percentComplete = (e.loaded / e.total) * 100;
+                            $(".progress-bar").css("width", percentComplete + "%");
+                        }
+                    }
+                },
+                success: function (data) {
+                    setTimeout(function () {
+                        $(".progress").slideUp(function () {
+                            if (data.msg === 'success') {
+                                $('#shift').val('');
+                                $('#dateRange').val('');
+                                $('#posid').val('');
+                                populateTable(data.data, itemsPerPage);
+                            } else {
+                                console.error(data.msg);
+                            }
+                        });
+                    }, 1000);
+                },
+                error: function (error) {
+                    console.error(error);
+                }
+            });
+        }
     });
 </script>
