--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card" style="height: 720px;">
+                    <div class="card inventory-card">
                         <div class="row mt-2">
                             <div class="col-md text-center">
                                 <div id="product-image">
