Added Stock Adjustment
-Added stockadjustment in middleware
-Added stockadjustment route
-Added stockadjustment view
-label adjustment in product inventory

--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -74,8 +74,7 @@
     <!-- cardbody-size-710 -->
     <div class="card shadow mb-2">
         <div class="progress progress-sm mb-2">
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
-                aria-valuemax="100">
+            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
             </div>
         </div>
         <div class="card-header py-3 header-bg">
@@ -88,7 +87,7 @@
                             <i class="fas fa-chevron-right"></i>
                         </button>
                         <% } %>
-                        <h6 class="mt-2 ml-3 font-weight-bold table-title">Product Inventory</h6>
+                        <h6 class="mt-2 ml-3 font-weight-bold table-title">Stock Adjustments</h6>
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -150,24 +149,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710 border">
-                <table class="table table-bordered custom-mobile-table" id="productinventory-datatable" width="100%"
-                    cellspacing="10">
-                    <thead class="table-header">
-                        <tr>
-                            <th>Inventory ID</th>
-                            <th>Product</th>
-                            <th>Category</th>
-                            <th>Branch ID</th>
-                            <th>Quantity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-        </div> -->
     </div>
 
     <div class="card shadow">
