--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -198,7 +198,7 @@
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Inventory Counts</span>
         </a>
-        <a class="collapse-item" href="#">
+        <a class="collapse-item" href="/stockadjustment">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Stock Adjustment</span>
         </a>
